--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,28 @@
 </head>
 <body>
   <div id="app">
-    <!-- 絞り込みラジオボタン -->
-    <!-- ToDo テーブル -->
-    <!-- 新規登録フォーム -->
+    <table>
+        <thead>
+            <tr>
+                <th class="id">ID</th>
+                <th class="comment">コメント</th>
+                <th class="state">状態</th>
+                <th class="button">-</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr v-for="item in todos" v-vind:key="item.id">
+                <th>{{ item.id }}</th>
+                <td>{{ item.comment }}</td>
+                <td class="state">
+                    <button>{{ item.state }}</button>
+                </td>
+                <td class='button'>
+                    <button>削除</button>
+                </td>
+            </tr>
+        </tbody>
+    </table>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
   <script src="main.js"></script>
