--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,14 @@
 </head>
 <body>
   <div id="app">
+    <label v-for="label in options" >
+        <input type="radio"
+          v-model="current"
+          v-bind:value="label.value">{{ label.label }}
+      </label>
+
+      （{{ computedTodos.length }} 件を表示）
+
     <table>
         <thead>
             <tr>
@@ -17,14 +25,14 @@
             </tr>
         </thead>
         <tbody>
-            <tr v-for="item in todos" v-vind:key="item.id">
+            <tr v-for="item in computedTodos" v-bind:key="item.id">
                 <th>{{ item.id }}</th>
                 <td>{{ item.comment }}</td>
                 <td class="state">
-                    <button>{{ item.state }}</button>
+                    <button v-on:click="doChangeState(item)">{{ item.state }}</button>
                 </td>
                 <td class='button'>
-                    <button>削除</button>
+                    <button c-on:click.ctrl="doRemove(item)">削除</button>
                 </td>
             </tr>
         </tbody>
