--- a/src/index.html
+++ b/src/index.html
@@ -29,14 +29,22 @@
                 <th>{{ item.id }}</th>
                 <td>{{ item.comment }}</td>
                 <td class="state">
-                    <button v-on:click="doChangeState(item)">{{ item.state }}</button>
+                    <button v-on:click="doChangeState(item)">{{ labels[item.state] }}</button>
                 </td>
                 <td class='button'>
-                    <button c-on:click.ctrl="doRemove(item)">削除</button>
+                    <button v-on:click.ctrl="doRemove(item)">削除</button>
                 </td>
             </tr>
         </tbody>
     </table>
+
+    <h2>新しい作業の追加</h2>
+    <form class="add-form" v-on:submit.prevent="doAdd">
+      <!-- コメント入力フォーム -->
+      コメント <input type="text" ref="comment">
+      <!-- 追加ボタンのモック -->
+      <button type="submit">追加</button>
+    </form>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
   <script src="main.js"></script>
