add vue-mindmap from CDN

--- a/src/index.html
+++ b/src/index.html
@@ -47,6 +47,8 @@
     </form>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
+  <link rel="stylesheet" href="https://unpkg.com/vue-mindmap/dist/vue-mindmap.css"></link>
+  <script src="https://unpkg.com/vue-mindmap"></script>  
   <script src="main.js"></script>
 </body>
 </html>
