--- a/src/index.html
+++ b/src/index.html
@@ -7,45 +7,13 @@
 </head>
 <body>
   <div id="app">
-    <label v-for="label in options" >
-        <input type="radio"
-          v-model="current"
-          v-bind:value="label.value">{{ label.label }}
-      </label>
-
-      （{{ computedTodos.length }} 件を表示）
-
-    <table>
-        <thead>
-            <tr>
-                <th class="id">ID</th>
-                <th class="comment">コメント</th>
-                <th class="state">状態</th>
-                <th class="button">-</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr v-for="item in computedTodos" v-bind:key="item.id">
-                <th>{{ item.id }}</th>
-                <td>{{ item.comment }}</td>
-                <td class="state">
-                    <button v-on:click="doChangeState(item)">{{ labels[item.state] }}</button>
-                </td>
-                <td class='button'>
-                    <button v-on:click.ctrl="doRemove(item)">削除</button>
-                </td>
-            </tr>
-        </tbody>
-    </table>
-
-    <h2>新しい作業の追加</h2>
-    <form class="add-form" v-on:submit.prevent="doAdd">
-      <!-- コメント入力フォーム -->
-      コメント <input type="text" ref="comment">
-      <!-- 追加ボタンのモック -->
-      <button type="submit">追加</button>
-    </form>
+    <mindmap
+      :nodes="nodes"
+      :connections="connections"
+      :editable="true"
+      ></mindmap>
   </div>
+  
   <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
   <link rel="stylesheet" href="https://unpkg.com/vue-mindmap/dist/vue-mindmap.css"></link>
   <script src="https://unpkg.com/vue-mindmap"></script>  
